# pod_serializable

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  OOBase.hpp  OORecord.hpp  PodRecord.hpp  main.cpp
